manifests/demo-producer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-producer
  namespace: demo-producer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-producer
  template:
    metadata:
      labels:
        app: demo-producer
    spec:
      containers:
      - name: demo-producer
        image: kafka-demo-producer:latest
        imagePullPolicy: Never # force use of local image
        command:
        - /bin/sh
        - -c
        - |
          # the Kafka cluster lives in another namespace, so the bootstrap service
          # must be addressed by its fully qualified name
          BROKERS=kafka-cluster-kafka-bootstrap.kafka.svc.cluster.local:9092

          # first create 50K messages, so we have some data
          /app/kafka-producer --brokers $BROKERS --messages 50000

          # then just keep producing messages for a couple of hours
          /app/kafka-producer --brokers $BROKERS --messages 100000 --start-from 50000 --random-delay 200
        resources:
          requests:
            memory: 256Mi
            cpu: 100m
          limits:
            memory: 512Mi
            cpu: 200m
